<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".Home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/ad_logo" />

        <TextView
            android:id="@+id/home_textview_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/home_cardview1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorAccent"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/home_busstop1"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/home_textview_bus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/home_bus"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_busnumber124"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="124"
                            android:textColor="@color/colorWhite" />


                        <TextView
                            android:id="@+id/home_textview_time124"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_time124_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/home_bus"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_busnumber143"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="143"
                            android:textColor="@color/colorWhite" />


                        <TextView
                            android:id="@+id/home_textview_time143"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_time143_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/home_cardview2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/colorAccent"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/home_busstop2"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/home_textview_bus2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/home_bus"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_busnumber123"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="123"
                            android:textColor="@color/colorWhite" />


                        <TextView
                            android:id="@+id/home_textview_time123"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                        <TextView
                            android:id="@+id/home_textview_time123_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:padding="8dp"
                            android:text="@string/home_time"
                            android:textColor="@color/colorWhite" />

                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/home_button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_refresh_black_24dp"
                android:drawableTint="@color/colorWhite"
                android:paddingLeft="4dp"
                android:paddingRight="6dp"
                android:text="@string/home_refresh"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>